--- a/Battleship/test/CMakeLists.txt
+++ b/Battleship/test/CMakeLists.txt
@@ -7,7 +7,11 @@ include_directories(${GTEST_INCLUDE_DIRS})
 
 include_directories("inc" "../inc")
 file(GLOB SOURCES "src/*.cc" "../src/*.cc")
+
+add_compile_options(-g -fprofile-arcs -ftest-coverage -lgcov)
+
+
 list(FILTER SOURCES EXCLUDE REGEX  ".*main.cc$")
 set(PThreadLib -pthread)
 add_executable(game ${SOURCES})
-target_link_libraries(game ${GTEST_BOTH_LIBRARIES} ${PThreadLib})
+target_link_libraries(game ${GTEST_BOTH_LIBRARIES} ${PThreadLib} gcov)
